...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_spacing"
                android:hint="@string/employee_name"
                app:startIconDrawable="@drawable/ic_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_employee_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@{employee.name  ?? null}" />
            </com.google.android.material.textfield.TextInputLayout>

...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_spacing"
                android:hint="@string/phone_number"
                app:startIconDrawable="@drawable/ic_call">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_employee_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="11"

                    android:text="@{employee.phoneNumber ?? null}" />
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_spacing"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/password_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_employee_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"

                    android:text="@{employee.password ?? null}" />
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_branch_name"
                app:startIconDrawable="@drawable/ic_store">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/actv_employee_branch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    app:itemsBranch="@{branches}"
                    app:textSelected="@{employee.branchName ?? null}" />
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/employee_permissions"
                app:startIconDrawable="@drawable/ic_permission">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/actv_employee_permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    app:items="@{@stringArray/employee_permissions}"
                    app:textSelected="@{employee.permission ?? null}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_spacing"
                android:text="@{employee.name != null ? @string/update : @string/add}" />


...
