<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="employee"
            type="com.casecode.domain.model.users.Employee" />
    </data>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/small_spacing">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_employee_permission_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:layout_marginTop="@dimen/small_spacing"
            android:text="@{employee.permission +' ' + '/' + ' '+ employee.branchName}"
            android:textAppearance="@style/TextAppearance.pos.TitleSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Admin: 1 / branchName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_employee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{employee.name}"
            android:layout_marginTop="@dimen/small_spacing"

            android:textAppearance="@style/TextAppearance.pos.BodyMedium"
            app:layout_constraintStart_toStartOf="@+id/tv_employee_permission_branch"
            app:layout_constraintTop_toBottomOf="@+id/tv_employee_permission_branch"

            tools:text="bracnh: 1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_employee_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="22342222222342"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginBottom="@dimen/small_spacing"
            android:text="@{employee.phoneNumber}"
            android:textAppearance="@style/TextAppearance.pos.LabelMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_employee_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_employee_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>